--- a/navbar2/style.css
+++ b/navbar2/style.css
@@ -22,7 +22,7 @@
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
     padding: 30px 10%;
 }
@@ -32,6 +32,9 @@ header {
     border-radius: 7px;
     border: 3px solid var(--primary-color);
     padding: 10px 30px;
+    margin-right: auto;
+    text-transform: uppercase;
+    font-weight: bolder;
     
 }
 
@@ -60,11 +63,15 @@ button {
     background-color: rgba(0, 136, 169, 1);
     transition: all 0.3s ease 0s;
     border: none;
+    margin-left: 20px;
 }
 
 button:hover {
     background-color: rgba(0, 136, 169, 0.7);
+}
 
+.nav-links li a:hover {
+    color: var(--primary-color);
 }
 
 @media screen and (max-width: 903px) {
